--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/rwilliamsIII/dine-or-dash/issues"
   },
-  "homepage": "https://github.com/rwilliamsIII/dine-or-dash#readme"
+  "homepage": "https://github.com/rwilliamsIII/dine-or-dash#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "mysql2": "^2.1.0",
+    "nodemon": "^2.0.3",
+    "passport": "^0.4.1",
+    "sequelize": "^5.21.7"
+  }
 }
