created post route/sequelize initialization

--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
     "development": {
       "username": "root",
-      "password": null,
-      "database": "",
-      "host": "localhost",
+      "password": "bear",
+      "database": "restaurant_db",
+      "host": "127.0.0.1",
       "port": 3306,
       "dialect": "mysql"
     },
     "test": {
       "username": "root",
-      "password": null,
-      "database": "",
+      "password": "bear",
+      "database": "restaurant_db",
       "host": "127.0.0.1",
       "dialect": "mysql"
     },
     "production": {
       "username": "root",
-      "password": null,
-      "database": "",
+      "password": "bear",
+      "database": "restaurant_db",
       "host": "127.0.0.1",
       "dialect": "mysql"
     }
