--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
     "development": {
       "username": "root",
-      "password": "password",
+      "password": "bear",
       "database": "restaurant_db",
-      "host": "localhost",
+      "host": "127.0.0.1",
       "port": 3306,
       "dialect": "mysql"
     },
