--- a/config/config.json
+++ b/config/config.json
@@ -15,10 +15,10 @@
       "dialect": "mysql"
     },
     "production": {
-      "username": "root",
-      "password": "bear",
-      "database": "restaurant_db",
-      "host": "127.0.0.1",
+      "username": "dlubgk1zp0j1nw85",
+      "password": "pm5lykpwcc94p9sj",
+      "database": "wh9vaw41o85ds5ll",
+      "host": "qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
       "dialect": "mysql"
     }
   }
