--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "fs": "0.0.1-security",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
+    "path": "^0.12.7",
     "sequelize": "^5.21.7"
   }
 }
