--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
+    "handlebars": "^4.7.6",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
